completed through PFA

--- a/templates/chap1.tex
+++ b/templates/chap1.tex
@@ -72,15 +72,22 @@ Based on the aforementioned opportunity to integrate uncertainty characterizatio
 \section{Thesis Outline}\label{ch1:outline}
 
 \begin{figure}[!htp]
-%\centering
-\begin{minipage}[b]{0.55\textwidth}
-This thesis follows the flow shown in Figure \ref{fig:thesis_flow} and is structured as follows: \\
-
-Chapter 2 provides relevant background on the origins of geothermal heat, types of geothermal systems, and a literature review on methods for risk management in geothermal exploration and facility planning. Chapters 3-4 explain the sources of data used in the thesis, preparation steps applied to that data, and the methods used for predictive analytics (Chapter 3) and cost modeling of geothermal facility project designs (Chapter 4). Also discussed is how uncertainty can be characterized and incorporated into both thesis focus areas. Chapters 5-6 describe the analytics and cost modeling results for exploration and development planning, respectively. Finally, Chapter 7 examines how learnings from the previous chapters can be framed as different risk mitigation actions in a comprehensive geothermal strategy. Chapters 8 and 9 conclude the thesis with a summary of thesis insights and a list of future work opportunities.
+\onehalfspacing
+\begin{minipage}[b]{0.53\textwidth}
+This thesis follows the flow shown in Figure \ref{fig:thesis_flow} and is structured as follows: 
+\begin{itemize}
+\item Chapter 2 provides relevant background on the origins of geothermal heat, types of geothermal systems, and a literature review on geothermal exploration and facility planning.
+\item Chapters 3-4 explain the sources of data used in the thesis, data preparation strategies, and the chosen methods for predictive analytics (Ch. 3) and cost modeling of geothermal facility project designs (Ch. 4).
+\item Chapters 5-6 describe and discuss the analytics results (Ch. 5) and cost modeling results (Ch. 6).
+\item Chapter 7 frames learnings from the previous chapters as risk mitigation actions in a comprehensive geothermal business strategy.
+\end{itemize}
 \end{minipage} \hfill
-\begin{minipage}[b]{0.40\textwidth}
-\includegraphics[scale=0.4]{Figure-ThesisWorkflow}
-\caption[Flow chart for thesis structure]{Flow chart of thesis structure. Chapter number placement indicates the content described in that chapter.}
+\begin{minipage}[b]{0.44\textwidth}
+\includegraphics[scale=0.44]{Figure-ThesisWorkflow}
+\caption[Flow chart for thesis structure]{Flow chart of thesis structure. Chapter number placement indicates the content presented within each chapter.}
 \label{fig:thesis_flow}
 \end{minipage}
+\begin{itemize}
+\item Chapters 8 and 9 conclude the thesis with a summary of thesis insights (Ch. 8) and a list of future work opportunities (Ch. 9).
+\end{itemize}
 \end{figure}
