--- a/templates/zotero.bib
+++ b/templates/zotero.bib
@@ -1,4 +1,375 @@
 
+@inproceedings{nash_adaptation_2015,
+	title = {Adaptation of a {Petroleum} {Exploration} {Tool} to {Geothermal} {Exploration}: {Preliminary} {Play} {Fairway} {Model} of {Tularosa} {Basin}, {New} {Mexico}, and {Texas}},
+	volume = {39},
+	url = {https://publications.mygeoenergynow.org/grc/1032215.pdf},
+	booktitle = {{GRC} {Transactions}},
+	author = {Nash, Gregory D and Bennett, Carlon R},
+	year = {2015},
+	pages = {743--750},
+}
+
+@techreport{wannamaker_structurally_2016,
+	address = {Salt Lake City, UT},
+	title = {Structurally controlled geothermal systems in the central {Cascades} arc-backarc regime, {Oregon}},
+	institution = {University of Utah},
+	author = {Wannamaker, Philip E},
+	year = {2016},
+}
+
+@techreport{jordan_low_2016,
+	address = {Ithaca, NY},
+	title = {Low {Temperature} {Geothermal} {Play} {Fairway} {Analysis} {For} {The} {Appalachian} {Basin}: {Phase} 1 {Revised} {Report} {November} 18, 2016},
+	institution = {Cornell University},
+	author = {Jordan, Teresa E and Richards, Maria C and Horowitz, Franklin G and Camp, Erin and Smith, Jared D and Whealton, Calvin A and Stedinger, Jery R and Hornbach, Matthew J and Frone, Zachary S and Tester, Jefferson W},
+	year = {2016},
+}
+
+@techreport{faulds_discovering_2019,
+	address = {Reno, NV},
+	title = {Discovering {Blind} {Geothermal} {Systems} in the {Great} {Basin} {Region}: {An} {Integrated} {Geologic} and {Geophysical} {Approach} for {Establishing} {Geothermal} {Play} {Fairways}: {All} {Budget} {Periods}},
+	institution = {Nevada Bureau of Mines and Geology, University of Nevada, Reno},
+	author = {Faulds, James and Hinz, Nicholas and Ayling, Bridget and Coolbaugh, Mark and Glen, Jonathan and Siler, Drew and Queen, John and Witter, Jeff and Hardwick, Christian},
+	year = {2019},
+}
+
+@inproceedings{fraser_regional_2010,
+	title = {A regional overview of the exploration potential of the {Middle} {East}: a case study in the application of play fairway risk mapping techniques},
+	volume = {7},
+	isbn = {2047-9921},
+	publisher = {Geological Society of London},
+	author = {Fraser, AJ},
+	year = {2010},
+	note = {Issue: 1},
+	pages = {791--800},
+}
+
+@article{doughty_geovision_2018,
+	title = {{GeoVision} {Analysis} {Supporting} {Task} {Force} {Report}: {Exploration}},
+	shorttitle = {{GeoVision} {Analysis} {Supporting} {Task} {Force} {Report}},
+	url = {https://escholarship.org/uc/item/4v7054cw},
+	abstract = {Author(s): Doughty, C; Dobson, PF; Wall, A; McLing, T; Weiss, C},
+	language = {en},
+	urldate = {2021-04-19},
+	author = {Doughty, C. and Dobson, P. F. and Wall, A. and McLing, T. and Weiss, C.},
+	month = jun,
+	year = {2018},
+}
+
+@article{blackwell_geothermal_1995,
+	title = {Geothermal regime in the central and eastern {United} {States} east of the {Rocky} {Mountains}},
+	journal = {Proc. World Geothermal Cong},
+	author = {Blackwell, David D and Wisian, Kenneth W and Stele, John L},
+	year = {1995},
+	pages = {649--653},
+}
+
+@techreport{bielicki_hydrogeolgic_2015,
+	address = {Los Alamos, NM},
+	title = {Hydrogeolgic windows: {Regional} signature detection for blind and traditional geothermal play fairways, {Final} {Reports}, {Los} {Alamos} {National} {Laboratory}},
+	institution = {LA-UR-15-28360},
+	author = {Bielicki, J. and Blackwell, D. and Harp, D. and Karra, S. and Kelley, R. and Kelly, S. and Middleton, R. and Pepin, J. and Person, M. and Sutula, G.},
+	year = {2015},
+}
+
+@article{millot_multi-isotopic_2007,
+	title = {Multi-isotopic tracing ({d7Li}, {d11B}, {87Sr}/{86Sr}) and chemical geothermometry: evidence from hydro-geothermal systems in {France}},
+	volume = {244},
+	issn = {0009-2541},
+	shorttitle = {Multi-isotopic tracing (δ{7Li}, δ{11B}, {87Sr}/{86Sr}) and chemical geothermometry},
+	url = {https://www.sciencedirect.com/science/article/pii/S0009254107003427},
+	doi = {10.1016/j.chemgeo.2007.07.015},
+	abstract = {In the present work, we report the results of a multi-isotopic study (δ7Li, δ11B and 87Sr/86Sr) on waters collected from different hydro-and geothermal sites in France. The aim of this study was to characterize hydro-and geothermal reservoirs by coupling a multi-isotopic approach with in-depth temperature of the reservoir calculated using chemical geothermometers. A database constituted by 36 water samples (thermal, thermo-mineral and geothermal waters) was selected in order to cover a wide range of temperatures and to be representative of water/rock interactions with various types of lithologies. We clearly observed that the wide range of 87Sr/86Sr isotopic ratios in the waters (0.70755-0.72187) appear to be largely controlled by the dominant host lithologies with Sr isotopic signatures ranging from high values (resulting from interaction from granite and/or gneiss type {\textgreater}0.714) to lower 87Sr/86Sr ratios (closer to Sr isotopic ratios observed in the sedimentary zones {\textless}0.712). Boron isotopic ratios lay between -8.3 and +21.6‰, also reflecting a lithological control over δ11B signatures. In addition, no simple or direct relationship was observed for either boron or strontium isotopic signatures with the temperature of the reservoir. In contrast, temperature plays an important role in controlling the lithium isotope composition of the hydro-and geothermal fluids. δ7Li signatures are comprised between -0.1 and +10.0‰ for temperatures ranging from 60 to 230 °C. This result seems to prove that lithium isotopic systematics represents a useful tool suitable for the characterization of hydrothermal and geothermal waters and suggests that the δ7Li composition of geothermal waters may be utilised as a geothermometer (δ7Li=-0.043±0.003 T+11.9±0.5).},
+	language = {en},
+	number = {3},
+	urldate = {2021-06-07},
+	journal = {Chemical Geology},
+	author = {Millot, Romain and Négrel, Philippe},
+	month = oct,
+	year = {2007},
+	keywords = {boron, chemical geothermometry, geothermal waters, hydrothermal waters, lithium, strontium isotopes},
+	pages = {664--678},
+}
+
+@misc{climeon_climeon_2021,
+	type = {Press {Release}},
+	title = {Climeon commissions second power plant in {Iceland}},
+	url = {https://climeon.com/investor-english/?type=single&title=climeon-commissions-second-power-plant-in-iceland&encrypted_id=287756C7C185BCA0#cision-table},
+	language = {en-US},
+	urldate = {2021-06-03},
+	journal = {Climeon commissions second power plant in Iceland},
+	author = {{Climeon}},
+	month = feb,
+	year = {2021},
+}
+
+@misc{climeon_climeon_2021-1,
+	title = {The {Climeon} {Heat} {Power} {System} - {How} does it work?},
+	url = {https://climeon.com/how-it-works/},
+	abstract = {Climeon Heat Power produces clean electricity from low-temperature waste heat from industrial processes and geothermal heat sources.},
+	language = {en-US},
+	urldate = {2021-05-01},
+	journal = {The Climeon Heat Power System - How does it work?},
+	author = {{Climeon}},
+	year = {2021},
+}
+
+@article{faulds_discovery_2018,
+	title = {Discovery of a {Blind} {Geothermal} {System} in {Southern} {Gabbs} {Valley}, {Western} {Nevada}, through {Application} of the {Play} {Fairway} {Analysis} at {Multiple} {Scales}},
+	volume = {42},
+	number = {DOE-UNR-06731-08},
+	journal = {GRC Transactions},
+	author = {Faulds, James and Craig, Jason and Hinz, Nicholas and Coolbaugh, Mark and Glen, Jonathan and Earnery, Tait and Schermerhorn, William and Peacock, Jared and Deoreo, Stephen and Siler, Drew},
+	year = {2018},
+	note = {Publisher: Nevada Bureau of Mines and Geology, University of Nevada, Reno},
+}
+
+@article{siler_play-fairway_2017,
+	title = {Play-fairway analysis for geothermal resources and exploration risk in the {Modoc} {Plateau} region},
+	volume = {69},
+	issn = {0375-6505},
+	journal = {Geothermics},
+	author = {Siler, Drew L and Zhang, Yingqi and Spycher, Nicolas F and Dobson, Patrick F and McClain, James S and Gasperikova, Erika and Zierenberg, Robert A and Schiffman, Peter and Ferguson, Colin and Fowler, Andrew},
+	year = {2017},
+	note = {Publisher: Elsevier},
+	pages = {15--33},
+}
+
+@article{lautze_play_2017,
+	title = {Play fairway analysis of geothermal resources across the state of {Hawaii}: 3. {Use} of development viability criterion to prioritize future exploration targets},
+	volume = {70},
+	issn = {0375-6505},
+	journal = {Geothermics},
+	author = {Lautze, Nicole and Thomas, Donald and Waller, David and Frazer, Neil and Hinz, Nicholas and Apuzen-Ito, Garrett},
+	year = {2017},
+	note = {Publisher: Elsevier},
+	pages = {406--413},
+}
+
+@article{lautze_play_2017-1,
+	title = {Play fairway analysis of geothermal resources across the {State} of {Hawaii}: 1. {Geological}, geophysical, and geochemical datasets},
+	volume = {70},
+	issn = {0375-6505},
+	shorttitle = {Play fairway analysis of geothermal resources across the {State} of {Hawaii}},
+	url = {https://www.osti.gov/pages/biblio/1550555-play-fairway-analysis-geothermal-resources-across-state-hawaii-geological-geophysical-geochemical-datasets},
+	doi = {10.1016/j.geothermics.2017.02.001},
+	abstract = {The U.S. Department of Energy's Office of Scientific and Technical Information},
+	language = {English},
+	number = {C},
+	urldate = {2021-06-09},
+	journal = {Geothermics},
+	author = {Lautze, Nicole and Thomas, Donald and Hinz, Nicholas and Apuzen-Ito, Garrett and Frazer, Neil and Waller, David},
+	month = nov,
+	year = {2017},
+	note = {Publisher: Elsevier},
+}
+
+@article{nash_phase_2017,
+	title = {Phase 2: {Updated} {Geothermal} {Play} {Fairway} {Analysis} of the {Tularosa} {Basin}, {New} {Mexico}},
+	volume = {41},
+	issn = {0193-5933},
+	journal = {Transactions-Geothermal Resources Council},
+	author = {Nash, Gregory D and Brandt, Adam and Pfaff, Brian and Hardwick, Christian and Gwynn, Mark and Blake, Kelly and Simmons, Stuart and Bennett, Carlon R},
+	year = {2017},
+	note = {Publisher: Ruby Mountain Inc., Salt Lake City, UT (United States)},
+}
+
+@inproceedings{garchar_geothermal_2016,
+	title = {Geothermal play fairway analysis: phase {I} summary},
+	author = {Garchar, Laura and Badgett, Alex and Nieto, Angel and Young, Kate and Hass, Eric and Weathers, Mike},
+	year = {2016},
+}
+
+@misc{eeri_play_2014,
+	title = {Play {Fairway} {Analysis}},
+	url = {https://www.energy.gov/eere/geothermal/play-fairway-analysis},
+	language = {en},
+	urldate = {2021-06-09},
+	journal = {Play Fairway Analysis Phase II Selections},
+	author = {{EERI}},
+	month = aug,
+	year = {2014},
+}
+
+@article{lottaroli_evaluating_2018,
+	title = {Evaluating a vintage play fairway exercise using subsequent exploration results: did it work?},
+	volume = {24},
+	issn = {1354-0793},
+	shorttitle = {Evaluating a vintage play fairway exercise using subsequent exploration results},
+	url = {https://pubs.geoscienceworld.org/pg/article-abstract/24/2/159/519277/Evaluating-a-vintage-play-fairway-exercise-using},
+	doi = {10.1144/petgeo2016-150},
+	language = {en},
+	number = {2},
+	urldate = {2021-06-09},
+	journal = {Petroleum Geoscience},
+	author = {Lottaroli, Fabio and Craig, Jonathan and Cozzi, Andrea},
+	month = may,
+	year = {2018},
+	note = {Publisher: GeoScienceWorld},
+	pages = {159--171},
+}
+
+@article{lichoro_joint_2019,
+	title = {Joint interpretation of gravity and resistivity data from the {Northern} {Kenya} volcanic rift zone: {Structural} and geothermal significance},
+	volume = {77},
+	issn = {0375-6505},
+	journal = {Geothermics},
+	author = {Lichoro, Charles Muturia and Arnason, Knutur and Cumming, William},
+	year = {2019},
+	note = {Publisher: Elsevier},
+	pages = {139--150},
+}
+
+@article{vozoff_joint_1975,
+	title = {Joint inversion of geophysical data},
+	volume = {42},
+	issn = {1365-246X},
+	number = {3},
+	journal = {Geophysical Journal International},
+	author = {Vozoff, K and Jupp, DLB},
+	year = {1975},
+	note = {Publisher: Blackwell Publishing Ltd Oxford, UK},
+	pages = {977--991},
+}
+
+@inproceedings{cappetti_new_2005,
+	title = {A new deep exploration program and preliminary results of a {3D} seismic survey in the {Larderello}-{Travale} geothermal field ({Italy})},
+	author = {Cappetti, Guido and Fiordelisi, Adolfo and Casini, Michele and Ciuffi, Simonetta and Mazzotti, Alfredo},
+	year = {2005},
+	pages = {24--29},
+}
+
+@article{weir_inversion_2018,
+	title = {Inversion and interpretation of seismic-derived rock properties in the {Duvernay} play},
+	volume = {6},
+	issn = {2324-8858},
+	url = {https://library.seg.org/doi/10.1190/INT-2017-0149.1},
+	doi = {10.1190/INT-2017-0149.1},
+	abstract = {We have developed an interpretive seismic workflow that incorporates multicomponent seismic inversion, guided by structural mapping, for characterizing low-permeability unconventional reservoirs. The workflow includes the determination of a calibrated time-depth relationship, generation of seismic-derived structural maps, poststack inversion, amplitude-variation-with-offset analysis, and PP-PS joint inversion. The subsequent interpretation procedure combines structural and inversion results with seismic-derived lithologic parameters, such as the Young’s modulus, Poisson’s ratio, and brittleness index. We applied this workflow to a 3D multicomponent seismic data set from the Duvernay play in the Kaybob area in Alberta, Canada. Subtle faults are discernible using isochron maps, horizontal time slices, and seismic stratal slices. Fault-detection software is also used to aid in the delineation of structural discontinuities. We found that seismic-derived attributes, coupled with structural mapping, can be used to map reservoir facies and thus to highlight zones that are most favorable for hydraulic-fracture stimulation. By imaging structural discontinuities and preexisting zones of weakness, seismic mapping also contributes to an improved framework for understanding the induced-seismicity risk.},
+	number = {2},
+	urldate = {2021-06-08},
+	journal = {Interpretation},
+	author = {Weir, Ronald M. and Eaton, David W. and Lines, Larry R. and Lawton, Donald C. and Ekpo, Eneanwan},
+	month = jan,
+	year = {2018},
+	note = {Publisher: Society of Exploration Geophysicists},
+	pages = {SE1--SE14},
+}
+
+@book{sheriff_exploration_1995,
+	title = {Exploration seismology},
+	isbn = {1-139-64311-8},
+	publisher = {Cambridge university press},
+	author = {Sheriff, Robert E and Geldart, Lloyd P},
+	year = {1995},
+}
+
+@book{holmes_oceanic_2009,
+	title = {Oceanic crustal structure from two-dimensional active source traveltime tomography},
+	volume = {70},
+	isbn = {1-109-34623-9},
+	author = {Holmes, Robert Chadwick},
+	year = {2009},
+	note = {Issue: 08},
+}
+
+@article{mariner_low-temperature_1983,
+	title = {Low-temperature geothermal resources in the western {United} {States}},
+	volume = {892},
+	journal = {Assessment of Low-Temperature Geothermal Resources of the United States-1982, US Circular},
+	author = {Mariner, Robert H and Brook, CA and Reed, MJ and Bliss, JD and Rapport, AL and Lieb, RJ},
+	year = {1983},
+	pages = {31--50},
+}
+
+@techreport{anderson_national_2013,
+	title = {{NATIONAL} {GEOTHERMAL} {DATA} {SYSTEM} ({NGDS}) {GEOTHERMAL} {DATA} {DOMAIN}: {ASSESSMENT} {OF} {GEOTHERMAL} {COMMUNITY} {DATA} {NEEDS}},
+	shorttitle = {{NATIONAL} {GEOTHERMAL} {DATA} {SYSTEM} ({NGDS}) {GEOTHERMAL} {DATA} {DOMAIN}},
+	url = {https://www.osti.gov/biblio/1130333},
+	abstract = {The U.S. Department of Energy's Office of Scientific and Technical Information},
+	language = {English},
+	urldate = {2021-06-04},
+	institution = {Boise State Univ., ID (United States)},
+	author = {Anderson, Arlene and Blackwell, David and Chickering, Cathy and Boyd, Toni and Horne, Roland and MacKenzie, Matthew and Moore, Joseph and Nickull, Duane and Richard, Stephen and Shevenell, Lisa A.},
+	month = jan,
+	year = {2013},
+}
+
+@article{sorey_low-temperature_1983,
+	title = {Low-temperature geothermal resources in the central and eastern {United} {States}},
+	volume = {892},
+	journal = {Assessment of low-temperature geothermal resources of the United States-1982: US Geological Survey Circular},
+	author = {Sorey, Michael L and Reed, Marshall J and Foley, Duncan and Renner, JL},
+	year = {1983},
+	pages = {51--65},
+}
+
+@techreport{muffler_assessment_1979,
+	title = {Assessment of geothermal resources of the {United} {States}, 1978},
+	url = {https://www.osti.gov/biblio/6870401},
+	abstract = {The U.S. Department of Energy's Office of Scientific and Technical Information},
+	language = {English},
+	number = {USGS-CIRC-790},
+	urldate = {2021-06-04},
+	institution = {Geological Survey, Reston, VA (USA). Geologic Div.},
+	author = {Muffler, L. J. P.},
+	month = jan,
+	year = {1979},
+	doi = {10.2172/6870401},
+}
+
+@techreport{blackwell_geothermal_2000,
+	title = {Geothermal {Resource}/{Reservoir} {Investigations} {Based} on {Heat} {Flow} and {Thermal} {Gradient} {Data} for the {United} {States}},
+	url = {https://www.osti.gov/biblio/758787},
+	abstract = {The U.S. Department of Energy's Office of Scientific and Technical Information},
+	language = {English},
+	number = {DOE/ID/13504},
+	urldate = {2021-06-04},
+	institution = {USDOE Idaho Operations Office, Idaho Falls, ID; Southern Methodist University, Dallas, TX (US)},
+	author = {Blackwell, D. D. and Wisian, K. W. and Richards, M. C. and Steele, J. L.},
+	month = apr,
+	year = {2000},
+	doi = {10.2172/758787},
+}
+
+@inproceedings{wisian_heat_1999,
+	title = {Heat flow in the western {United} {States} and extensional geothermal systems},
+	volume = {219},
+	publisher = {Citeseer},
+	author = {Wisian, Kenneth W and Blackwell, David D and Richards, Maria},
+	year = {1999},
+}
+
+@techreport{blackwell_heat_1990,
+	title = {Heat flow patterns of the {North} {American} continent: {A} discussion of the {DNAG} {Geothermal} {Map} of {North} {America}},
+	shorttitle = {Heat flow patterns of the {North} {American} continent},
+	url = {https://www.osti.gov/biblio/896322},
+	abstract = {The U.S. Department of Energy's Office of Scientific and Technical Information},
+	language = {English},
+	urldate = {2021-06-04},
+	institution = {DOEEEGTP (USDOE Office of Energy Efficiency and Renewable Energy Geothermal Tech Pgm)},
+	author = {Blackwell, David D. and Steele, John L. and Carter, Larry C.},
+	month = jan,
+	year = {1990},
+	doi = {10.2172/896322},
+}
+
+@article{kehle_aapg_1970,
+	title = {The {AAPG} geothermal survey of {North} {America}},
+	volume = {2},
+	issn = {0375-6505},
+	url = {https://www.sciencedirect.com/science/article/pii/0375650570900349},
+	doi = {10.1016/0375-6505(70)90034-9},
+	abstract = {Modern data enhancement techniques allow the AAPG geothermal survey of North America to use temperature data from oil, gas, and water wells in determining the thermal regimes of the continent. Without treatment these data would not be usable. Individual well bore temperature measurements may be highly inaccurate. Valid and invalid data are indistinguishable. Yet temperature measurements in well bores are the only data supply large enough to permit a continent-wide geothermal survey. A technique for making these data usable had to be developed. A two dimensional smoothing or filtering operation will be used in areas of high data density. The method is similar to those employed in improving the quality of satellite transmitted photographic data. Typically a weighted average of data in the neighborhood of a datum point is used for the value at that point. If the central datum differs too much from its neighbours, it is discarded. This precludes spreading a noise burst and thus eliminates one source of false regional anomalies. Because this procedure may also eliminate strong local anomalies, all discorded points will be designated on the final maps. The weights used to average neighboring data points are determined theoretically via communications theory. This theory also provides reliable estimates of error magnitude. Computed error magnitudes will be used to select contour intervals on all final maps. The validity of these data enhancement techniques will be checked by comparing the final maps against all known reliable geothermal gradient determinations in North America. Some of these have been made by scientists under controlled conditions specifically to determine geothermal gradients. Most are simply accurate measurements of steady state temperature in deep oil and gas reservoirs. Preliminary results indicate excellent agreement. In sparse data areas, standard smoothing and filtering techniques are of questionable value and are not used in the survey. Instead trend surfaces are fitted to the data. The nature of the surface used to depict geothermal gradient in any given area depends on both the internal consistency of the data and on its density. A completed geothermal survey of North America is the first step in assessing the thermal resources of the continent. It also provides scientists with information essential to the study of hydrocarbon maturation, sediment diagenesis and many other important geologic processes. Thanks to modern techniques of communications theory, the survey is feasible and should be completed on schedule by the end of 1974.},
+	language = {en},
+	urldate = {2021-06-04},
+	journal = {Geothermics},
+	author = {Kehle, R. O. and Schoeppel, R. J. and Deford, R. K.},
+	month = jan,
+	year = {1970},
+	pages = {358--367},
+}
+
 @misc{eia_electric_2020,
 	title = {Electric {Power} {Annual} 2019},
 	url = {https://www.eia.gov/electricity/annual/},
@@ -70,18 +441,6 @@
 	author = {Ross, Malcolm},
 	month = oct,
 	year = {2020},
-}
-
-@misc{climeon_climeon_2021,
-	type = {Press {Release}},
-	title = {Climeon commissions second power plant in {Iceland}},
-	url = {https://climeon.com/investor-english/?type=single&title=climeon-commissions-second-power-plant-in-iceland&encrypted_id=287756C7C185BCA0#cision-table},
-	language = {en-US},
-	urldate = {2021-06-03},
-	journal = {Climeon},
-	author = {{Climeon}},
-	month = feb,
-	year = {2021},
 }
 
 @misc{geoenergy_baseload_2020,
@@ -939,17 +1298,6 @@ Publication Title: US EIA - Short-Term Energy Outlook},
 	year = {2019},
 }
 
-@misc{climeon_climeon_2021-1,
-	title = {The {Climeon} {Heat} {Power} {System} - {How} does it work?},
-	url = {https://climeon.com/how-it-works/},
-	abstract = {Climeon Heat Power produces clean electricity from low-temperature waste heat from industrial processes and geothermal heat sources.},
-	language = {en-US},
-	urldate = {2021-05-01},
-	journal = {Climeon},
-	author = {{Climeon}},
-	year = {2021},
-}
-
 @article{ostrom_heat_2019,
 	title = {Heat recovery system and a method using a heat recovery system to convert heat into electrical energy},
 	author = {Öström, Thomas and Askebjer, Per and Karthäuser, Joachim},
@@ -1010,18 +1358,6 @@ Publication Title: US EIA - Short-Term Energy Outlook},
 	year = {1973},
 	note = {Publisher: Elsevier},
 	pages = {29--46},
-}
-
-@article{doughty_geovision_2018,
-	title = {{GeoVision} {Analysis} {Supporting} {Task} {Force} {Report}: {Exploration}},
-	shorttitle = {{GeoVision} {Analysis} {Supporting} {Task} {Force} {Report}},
-	url = {https://escholarship.org/uc/item/4v7054cw},
-	abstract = {Author(s): Doughty, C; Dobson, PF; Wall, A; McLing, T; Weiss, C},
-	language = {en},
-	urldate = {2021-04-19},
-	author = {Doughty, C. and Dobson, P. F. and Wall, A. and McLing, T. and Weiss, C.},
-	month = jun,
-	year = {2018},
 }
 
 @techreport{augustine_geovision_2019,
@@ -1931,13 +2267,6 @@ Publisher: Nature Publishing Group},
 	author = {Pepin, Jeffrey Donald},
 	year = {2018},
 	note = {ISBN: 0438764366},
-}
-
-@techreport{bielicki_hydrogeolgic_2015,
-	title = {Hydrogeolgic windows: {Regional} signature detection for blind and traditional geothermal play fairways, {Final} {Reports}, {Los} {Alamos} {National} {Laboratory}},
-	institution = {LA-UR-15-28360},
-	author = {Bielicki, J. and Blackwell, D. and Harp, D. and Karra, S. and Kelley, R. and Kelly, S. and Middleton, R. and Pepin, J. and Person, M. and Sutula, G.},
-	year = {2015},
 }
 
 @article{siler_three-dimensional_2019,
