--- a/templates/acronyms.tex
+++ b/templates/acronyms.tex
@@ -1,4 +1,5 @@
 \newacronym{aeo}{AEO}{Annual Energy Outlook}
+\newacronym{dem}{DEM}{Digital Elevation Model}
 \newacronym{doe}{DOE}{United States Department of Energy}
 \newacronym{egs}{EGS}{Enhanced Geothermal Systems}
 \newacronym{eia}{EIA}{United States Energy Information Administration}
@@ -15,4 +16,5 @@
 \newacronym{mwh}{MWh}{Megawatt-Hour}
 \newacronym{nrel}{NREL}{National Renewable Energy Laboratory}
 \newacronym{opec}{OPEC}{Organization of the Petroleum Exporting Countries}
+\newacronym{pfa}{PFA}{Play Fairway Analysis}
 \newacronym{usgs}{USGS}{United States Geological Survey}
