--- a/templates/chap2.tex
+++ b/templates/chap2.tex
@@ -77,15 +77,78 @@ EGS can provide the bridge between geothermal use in niche hydrothermal environm
 As the fate of these projects might suggest, the long-standing promise of EGS has not yet been fully realized. However, several active projects supported by the DOE and NREL (e.g. EDGE, FORGE, EGS Collab) are providing the insights necessary to mature subsurface models, drilling technologies, and stimulation methods for more widespread EGS adoption \citep{hamm_geothermal_2021}. And recent technology advances and partnerships involving start-ups Fervo Energy \citep{moss_google_2021,shieber_geothermal_2021}, Deep Earth Energy \citep{geoenergy_saskatchewan_2021}, Eavor Technologies \citep{ross_energy_2020}, and Climeon \citep{climeon_climeon_2021,geoenergy_baseload_2020} show there is a growing fervor to overcome the technology roadblocks currently holding EGS back. Projections show the size of the prize with success in EGS. Assuming a maximum cut-off depth of 7 km and a minimum reservoir temperature of 150\(^\circ C\), the EGS resource potential for electricity production in the continental United States might be at least \texttt{\char`\~}5,150 GWe, with an additional \texttt{\char`\~}1,500 MWe from NF-EGS \citep{augustine_geovision_2019}. To put this opportunity into context: the total utility-scale electricity generation capacity from \underline{all} sources in the United States was \texttt{\char`\~}1,200 GWe in 2019, over 4x less in magnitude \citep{eia_electric_2020}.
 
 \section{Geothermal Exploration}\label{ch2:geoexp}
+\subsection{Background}
+Historically, the identification of geothermal resources primarily relied on surface expressions of hot fluids circulating at depth. Quite simply, if a bubbling hot spring or a geyser was present, you had a working hydrothermal system. Some of the first sites for geothermal power production, like Larderello and The Geysers, were unsurprisingly targeted because of their tell-tale surface characteristics \citep[~p. 111]{glassley_geothermal_2015}. However, this prospecting method only applies to fully-functioning hydrothermal systems, and not all such systems have surface manifestations if fluids remain trapped beneath a subsurface impermeable seal. These hidden or “blind” geothermal resources require more sophisticated exploration methods to identify and assess accurately.
+\subsection{Regional Exploration}
+Regional evaluation techniques classically relied on sparse borehole data, including water wells and oil \& gas wells, to map out the geothermal potential of the U.S. \citep{kehle_aapg_1970}. Successive efforts led to progressively more comprehensive collections of surface heat flow and borehole temperature measurements \citep{blackwell_temperature-at-depth_2011, blackwell_heat_1990, muffler_assessment_1979, sorey_low-temperature_1983, wisian_heat_1999}, now widely-available with other geothermal data through the DOE-funded National Geothermal Data System platform \citep{anderson_national_2013}. These efforts supported a better understanding of broad trends directly tied to tectonic provinces in the United States. Subduction and transform plate boundaries in the West, combined with extension in the Basin and Range, make this area of the U.S. more susceptible to high heat flow, high geothermal gradient, and greater potential for hydrothermal system activity \citep{mariner_low-temperature_1983}. Passive margins on the Atlantic and Gulf of Mexico sides make those regions less likely to host significant hydrothermal systems, although surveys have identified sedimentary basins with elevated heat flow in the south (Louisiana-Arkansas), central (Iowa-Illinois, Nebraska-South Dakota), and eastern (Appalachians) parts of the country \citep{blackwell_geothermal_1995, sorey_low-temperature_1983}.
 
-\subsection{System Type}
-\subsubsection{Direct Use}
-\subsubsection{Conventional}
-\subsubsection{Enhanced}
+\subsection{Sub-regional Exploration}
+Continental maps provide a super-regional view of geothermal prospectivity, but further refinement is required to progress an exploration program. Specifically, the determination of regional plays and local prospects must come before deciding where and how to develop a geothermal field, e.g., for electricity generation. Characterization activities can be decomposed into defining the magnitude and extent of four earth subsystems: structural, stratigraphic, hydrologic, and thermal. The main types of surveys associated with each subsystem are listed in Table \ref{tab:surveytypes} and discussed briefly in the following section. Note that the various survey methods typically provide information on multiple subsystems. The associated non-uniqueness of subsurface interpretations based on these survey results highlights the need to integrate multiple lines of evidence for exploration activities. 
+
+\begin{table}[!htp]
+\begin{tabular}{ll}
+\textbf{Structural}     & \textbf{}                                                \\ \hline
+Aerial survey           & surface fault traces                                     \\
+Earthquake records      & fault location, recency                                  \\
+Geodetic survey         & active deformation or faulting                           \\
+Geologic survey         & surface fault traces, fault recency                      \\
+Gravity survey          & subsurface faults, plutons, salt                         \\
+Resistivity survey      & fractured zones                                          \\
+Satellite survey        & topography, structural patterns                          \\
+Seismic surveys         & subsurface faults, folds, other structural features      \\
+                        &                                                          \\
+\textbf{Stratigraphic}  &                                                          \\ \hline
+Geologic survey         & stratigraphic chart, seal and reservoir                  \\
+Gravity survey          & density anomalies, stratigraphic variations              \\
+Magnetic survey         & igneous formations, stratigraphy and reservoir           \\
+Radiometric survey      & mineral abundances, source and reservoir                 \\
+Resistivity survey      & thermal conductivity, lithology                          \\
+Satellite survey        & distribution of outcrops and formations                  \\
+Seismic survey          & stratigraphy and rock properties                         \\
+                        &                                                          \\
+\textbf{Hydrologic}     &                                                          \\ \hline
+Earthquake records      & movement of magma or fluids                              \\
+Geologic survey         & surface expressions (vents, geysers, deposits), drainage \\
+Hydrologic survey       & fluid geochemistry, recharge and rate, water table       \\
+Magnetic survey         & hydrothermal alteration                                  \\
+Precipitation records   & water cycle inputs, recharge rate                        \\
+Resistivity survey      & subsurface fluids or hydrothermal alteration             \\
+Satellite survey        & surface drainage patterns, distribution of deposits      \\
+Seismic survey          & presence and location of subsurface fluids               \\
+                        &                                                          \\
+\textbf{Thermal}        &                                                          \\ \hline
+Aerial survey           & thermal anomalies in shallow subsurface (IR)             \\
+Air Temperature records & near-surface thermal conditions                          \\
+Geologic survey         & surface manifestations (dikes, vents, deposits)          \\
+Gravity survey          & presence of high-T anomalies (e.g. magma)                \\
+Hydrologic survey       & geothermometry, dominant geofluid liquid phase           \\
+Radiometric survey      & radioactive heat generation                              \\
+Resistivity survey      & thermal conductivity, temperature gradient               \\
+Temperature survey      & heat flow, geothermal gradient                          
+\end{tabular}
+\caption{Data collection methods useful for characterizing and derisking Earth subsystems that influence geothermal favorability}
+\label{tab:surveytypes}
+\end{table}
+
+\subsubsection{Geologic Data Collection}
+Geologic field mapping in an area can provide crucial direct evidence supporting the presence of geothermal systems. Surface manifestations like geysers, vents, and mud pots may also be coincident with mappable mineralogic indicators of the subsurface chemistry and style of geothermal activity.  Volcanic-based geothermal systems tend to have acid-sulfate waters with hydrogen sulfide-rich brines that leave behind sulfur deposits \citep[~p. 123]{glassley_geothermal_2015}. Bicarbonate geothermal waters can produce distinctive travertine terraces or subaqueous tufa deposits, as well as a unique variety of K-spar called adularia \citep[~p. 125]{glassley_geothermal_2015}. And chloride geothermal fluids are known to precipitate sinter or geyserite deposits composed of opal or amorphous silica \citep[~p. 125]{glassley_geothermal_2015}. Elevated abundances of trace elements like boron and lithium typically occur in chloride brines compared to meteoric (derived from precipitation) waters, so their presence in mineral assemblages is also diagnostic \citep{bielicki_hydrogeolgic_2015, millot_multi-isotopic_2007}. Other valuable products of a geologic survey include maps of surface fault patterns to better constrain the structural history, as well as volcanic intrusive (dikes) and extrusive (flows) features for understanding the thermal history and potential deeper reservoir potential.
+
+Direct geochemical analysis of springs, pools, and samples collected from wells provides additional insights into the hydrologic characteristics of an area. Water chemistry offers information on the dominant resource fluid phase (vapor vs. liquid), the temperature of the subsurface formations encountered by the fluids, and the nature of the original water source \citep[~p. 25]{dipippo_geothermal_2012}. The concentration or equilibria of different elements, e.g., quartz, chalcedony, sodium, potassium, and calcium, can be compared to empirically-derived trends for reservoir temperature estimates \citep[~p. 157]{glassley_geothermal_2015}. These geothermometry methods offer insights into the deep thermal regime, although uncertainty around fluid migration pathways disallows any clear designation of the exact location and depth of a thermal reservoir.
+
+Field methods like water sampling and geologic mapping offer local insights that can be interpolated for a bigger picture understanding of an area, with the caveat that field data tend to be limited in both number and spatial distribution. Aerial and satellite surveys provide regionally extensive measurements without the spatial sampling bias implicit in field activities. High-resolution topography captured in \acrlong{dem} (\acrshort{dem}) and their gradient (slope) can reveal morphology patterns tied to surface water drainage and recharge potential for deeper geothermal systems. Other optical products provide additional information of value; infrared imagery captures thermal anomalies in the shallow subsurface, stereographic images emphasize fault offsets missed in the field, and hyperspectral imaging can discriminate between different mineral assemblages, including geothermally-sourced boron-rich accumulations \multicitep{dipippo_geothermal_2012, ~p. 22;glassley_geothermal_2015, ~p. 154-155}.
+
+\subsubsection{Geophysical Data Collection}
+Geophysical methods also offer regional data coverage while also providing insights into how subsurface characteristics vary with depth. Magnetic surveys detect the magnetic fields imprinted on rocks that contain susceptible minerals and have experienced appropriate thermal conditions \citep[~p. 248-249]{lowrie_fundamentals_2007}. Magnetic anomalies, calculated by removing the regional magnetic field and non-geologic signals, can indicate the presence of intrusive volcanic bodies or hydrothermally-altered formations \citep[~p. 146]{glassley_geothermal_2015}. Gravity surveys similarly consider variations in local values after applying a regional gravity removal and other corrections \citep[~p. 59-62]{lowrie_fundamentals_2007}. Gravity anomalies highlight differences in subsurface density, which may be diagnostic of mineral alteration from hydrothermal processes, the presence of fractures, or pore fluid changes (e.g., replacement of meteoric water with hydrocarbons, hydrothermal fluids, or steam) \citep[~p. 150]{glassley_geothermal_2015}. Resistivity surveys measure electrical resistivity (or its inverse, conductivity) within an instrumented area – a property sensitive to fluids in rock pores or fractures and some variations in mineralogy, i.e., within alteration zones \citep[~p. 147]{glassley_geothermal_2015}. However, poor resolution beyond shallow (~1 km) depths strongly limits the reach of classic resistivity studies. Magnetotellurics (MT), measurements of currents induced by natural electromagnetic waves originating in the ionosphere, can extend conductivity insights much deeper, even into the upper mantle \citep[~p. 225]{lowrie_fundamentals_2007}. And seismic surveys, which measure acoustic wave propagation in the subsurface, can be processed and modeled to image stratigraphy, faults, fluids, and rock properties to a range of depths. Seismic refraction data can constrain whole crustal thickness \citep[e.g.][]{holmes_oceanic_2009}, with implications on heat flow, while seismic reflection data could define the thickness and extent of a geothermal reservoir and trapping geometry \citep[e.g.][]{cappetti_new_2005}.
+
 \subsection{Strategies}
+\subsubsection{Joint Inversion}
+As powerful as geophysical methods are at remotely detecting earth properties, each method represents an inherently underconstrained problem. Complex mathematical routines can invert data collected by aerial survey (e.g., gravity, magnetics) or through surface acquisition techniques (resistivity, MT, seismic) to create 2D or 3D subsurface models. Still, unlike highly precise medical imaging technologies like Magnetic Resonance Imaging (MRI) that completely surround the target, geophysical techniques have a limited top-down view of the earth and must contend with noisy environments. Solutions to geophysical problems thus tend to be non-unique, and uncertainty increases with depth. Joint approaches to mathematical inversion for subsurface models address this ambiguity by constraining solutions to match the observations from multiple geophysical methods at once \citep{vozoff_joint_1975}. The complexity of a joint inverse problem applied to geothermal rapidly grows as more data sets are incorporated, particularly when the different data are sensitive to different earth properties \citep{moorkamp_framework_2011}. In addition, geothermal model results can meaningfully differ depending on the selected mathematical treatment used to generate solutions \citep{rosenkjaer_comparison_2015}. One alternative approach avoids the mathematical and computational demands by combining data semi-quantitatively, either by visually correlating individual model results or by cascading constraints from one geophysical model to the next to generate an integrated solution \citep{jousset_hengill_2011, lichoro_joint_2019}.
+
 \subsubsection{Play Fairway Analysis}
-\subsubsection{Unsupervised Machine Learning}
-\subsubsection{Supervised Machine Learning}
+Regional or play scale exploration methods adapted from oil \& gas companies include geospatial risk assessments known as \acrlong{pfa} (\acrshort{pfa}).  Conceptually, PFA breaks risk down into the constituent elements of a successful hydrocarbon play: reservoir, source, and seal \citep{fraser_regional_2010,nash_adaptation_2015}. Maps are generated for each element based on any available data, including literature reviews, point data like wells or field sampling, and modeling results. Taking the cumulative evidence (or lack thereof) as input, subject matter experts provide a perception of chance as a probability, and statistical approaches combine the different probability maps into a cumulative favorability map and calculations of yet-to-find resource volumes \citep{lottaroli_evaluating_2018}. The GTO supported a number of projects focused on applying PFA techniques to identify geothermal plays across the United States, including blind and EGS geothermal systems, in 2014 \citep{eeri_play_2014}. Each study developed its own methodology for defining the primary geothermal play risk factors, quantifying uncertainty, and generating a final favorability map \citep{faulds_discovering_2019, jordan_low_2016, nash_phase_2017, wannamaker_structurally_2016}. The two common risk elements among all studies included the presence of heat and permeability \citep{garchar_geothermal_2016}.
+
+\subsubsection{Machine Learning}
+
 \subsection{Uncertainties}
 \subsubsection{Important Indicators}
 \subsubsection{Data Coverage}
